default/objects/GFNI_Opportunity_log__b/GFNI_Opportunity_log__b.object-meta.xml
<CustomObject>
    <label>GFNI Opportunity Log</label>
    <pluralLabel>GFNI Opportunity Logs</pluralLabel>
</CustomObject>