default/objects/GFNI_Opportunity_log__b/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <label>Log Type</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>