default/objects/GFNI_Opportunity_log__b/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>GFNI_Opportunity_log</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>