default/objects/GFNI_Opportunity_log__b/fields/RecordDateTime__c.field-meta.xml
<CustomField>
    <fullName>RecordDateTime__c</fullName>
    <label>Record Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>