default/objects/GFNI_Opportunity_log__b/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>